Create DeprecatedRecord class and move all functionality for deprecated records into DeprecatedRecord.